<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/radial"
    tools:context=".activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_marginTop="65dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icons_film"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/tv_register"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="40sp"
            android:fontFamily="@font/baloo"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiplayout_register_user_name"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:theme="@style/AppTheme"
            app:errorTextColor="@color/red_100">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_register_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                android:elegantTextHeight="false"
                android:hint="@string/tip_name"
                android:inputType="textPersonName"
                android:maxLength="100"
                android:textSize="20dp"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiplayout_register_user_birthday"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:theme="@style/AppTheme"
            app:errorTextColor="@color/red_100">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_register_user_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                android:elegantTextHeight="false"
                android:focusable="false"
                android:hint="@string/tip_birthday"
                android:inputType="date"
                android:maxLength="100"
                android:textSize="20dp"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiplayout_register_email"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:theme="@style/AppTheme"
            app:errorTextColor="@color/red_100">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                android:elegantTextHeight="false"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:maxLength="100"
                android:textSize="20dp"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/tiplayout_register_password"
            android:layout_height="90dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white_50"
            app:counterEnabled="true"
            app:counterOverflowTextAppearance="@style/CounterOverFlow"
            app:counterTextColor="@color/white"
            app:counterMaxLength="20"
            app:errorTextColor="@color/red_100"
            android:theme="@style/AppTheme">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                android:elegantTextHeight="false"
                android:id="@+id/edittext_register_password"
                android:textColor="@color/white"
                android:hint="@string/tip_password_1"
                android:maxLength="20"
                android:inputType="textPassword"
                android:textSize="20dp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:id="@+id/tiplayout_register_confirm_password"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white_50"
            app:counterEnabled="true"
            app:counterOverflowTextAppearance="@style/CounterOverFlow"
            app:counterTextColor="@color/white"
            app:counterMaxLength="20"
            app:errorTextColor="@color/red_100"
            android:theme="@style/AppTheme">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                android:elegantTextHeight="false"
                android:id="@+id/edittext_register_confirm_password"
                android:textColor="@color/white"
                android:hint="@string/tip_password_2"
                android:maxLength="20"
                android:inputType="textPassword"
                android:textSize="20dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/cb_register_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/cb_agree"
            android:textSize="16dp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/red"
            android:text="@string/btn_confirm"
            android:fontFamily="@font/baloo"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="40dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_have_accout"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16dp" />
            <TextView
                android:id="@+id/tv_login"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_login"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:textSize="19sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>