<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    tools:context=".fragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView_poster_home_3x4"
                    android:layout_width="match_parent"
                    android:layout_height="660dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/null_image34" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radial" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/icons_film" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/baloo"
                        android:text="RealPhim"
                        android:textColor="#CCFFFFFF"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView_new_movies"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:text="@string/textview_new_movie"
                        android:textColor="#CCFFFFFF"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:text="@string/textview_category"
                        android:textColor="#CCFFFFFF"
                        android:textSize="16sp"
                        tools:ignore="TouchTargetSizeCheck" />

                    <TextView
                        android:id="@+id/textView_nation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:text="@string/textview_nation"
                        android:textColor="#CCFFFFFF"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="100dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_name_movies_home"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="7dp"
                        android:text="Đang tải...."
                        android:textColor="#ffff"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView_category_movies_home"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:text="Đang tải...."
                        android:textColor="#B3ffffff"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/btn_trailer_home"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:src="@drawable/video_camera_white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Trailer"
                                android:textColor="#ffff"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <Button
                            android:id="@+id/btn_play"
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/button_play"
                            android:backgroundTint="@color/white"
                            android:fontFamily="sans-serif-black"
                            android:text="▶ Phát"
                            android:textAllCaps="false"
                            android:textColor="#000000"
                            android:textSize="17sp"
                            android:textStyle="bold"
                            tools:ignore="TouchTargetSizeCheck" />

                        <LinearLayout
                            android:id="@+id/btn_information_home"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:src="@drawable/information" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Thông tin"
                                android:textColor="#ffff"
                                android:textSize="16sp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/movieContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/radial"
            android:orientation="vertical" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>